# rinha-2026

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  haproxy.cfg  info.json  nginx.conf
crates/fraud/: Cargo.toml
crates/fraud/src/: build.rs  fast_parse.rs  index.rs  lib.rs  payload.rs  vector.rs
