[workspace]
members = ["crates/fraud"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
memmap2 = "0.9"
mimalloc = { version = "0.1", default-features = false }
monoio = { version = "0.2", features = ["iouring", "legacy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
incremental = false

[profile.release.package."*"]
codegen-units = 1
