[package]
name = "fraud"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
flate2.workspace = true
memmap2.workspace = true
mimalloc.workspace = true
monoio.workspace = true
serde.workspace = true
serde_json.workspace = true
